--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <h1>Uh oh!</h1>
-  <div class="link">
-    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />
-  </div>
+  <h1> !Check url carefully! </h1>
+  <h1> Example) https://haram-kim.github.io/Globally Aligned Events/ (incorrect)   </h1>
+  <h1> https://haram-kim.github.io/Globally_Aligned_Events/ (correct)  </h1>
+    
   <br />
   <br />
-  <a href="/">Take me home!</a>
+  <a href="/">Go to home</a>
 </section>
