--- a/404.html
+++ b/404.html
@@ -4,9 +4,10 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <h1> !Check url carefully! </h1>
-  <h1> Example) https://haram-kim.github.io/Globally Aligned Events/ (incorrect)   </h1>
-  <h1> https://haram-kim.github.io/Globally_Aligned_Events/ (correct)  </h1>
+  <h1> !Check URL carefully! </h1>
+  <h1> Example) </h1> 
+    haram-kim.github.io/Globally Aligned Events/ (incorrect)
+    haram-kim.github.io/Globally_Aligned_Events/ (correct)
     
   <br />
   <br />
