--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@ permalink: /404.html
 <section class="lost-container">
   <h1> !Check URL carefully! </h1>
   <h1> Example) </h1> 
-    haram-kim.github.io/Globally Aligned Events/ (incorrect)
-    haram-kim.github.io/Globally_Aligned_Events/ (correct)
+  <h2> haram-kim.github.io/Globally Aligned Events/ (incorrect) </h2>
+  <h2> haram-kim.github.io/Globally_Aligned_Events/ (correct) </h2>
     
   <br />
   <br />
